# convolutions

./: CMakeLists.txt  CMakeLists_linux.txt  Convolution.cxx  Convolution.h  IOFunctions.h  Kernel.cxx  Kernel.h  MathFunctions.h  README.md  main.cxx
